--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@next/mdx": "^14.2.0",
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/mdx": "^3.0.0",
     "gray-matter": "^4.0.3",
-    "next-mdx-remote": "^4.4.1",
     "rehype-highlight": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0"
