--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [nextjs-mdx-migration]
+    branches: [master]
   workflow_dispatch:
 
 permissions:
