--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "deploy": "next build && next export && touch out/.nojekyll"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^3.0.0",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.546.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@mdx-js/mdx": "^3.0.0",
-    "gray-matter": "^4.0.3",
     "rehype-highlight": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
     "highlight.js": "^11.9.0",
     "postcss": "^8.4.38",
