--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@mdx-js/mdx": "^3.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.546.0",
+    "mermaid": "^11.12.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "rehype-highlight": "^7.0.0",
+    "rehype-mermaidjs": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0"
   },
